# magne-flame

./: .gitignore  Cargo.toml  README.md
book/: README.md  book.toml
book/src/: FuzzerContext.md  GetStarted.md  ImplMutation.md  ImplScheduler.md  ImplSupervisor.md  SUMMARY.md
examples/: multithread.rs  singlethread.rs
examples/afl/: .gitignore  Cargo.toml
examples/afl/src/: afl_util.rs  main.rs  mutator.rs  scheduler.rs  supervisor.rs
examples/target_programs/: .gitignore  Makefile  crash_test_argv.c  crash_test_argv.vcxproj  crash_test_filename.c  crash_test_filename.vcxproj
src/: fuzzer.rs  lib.rs  mutator.rs  prelude.rs  reporter.rs  scheduler.rs  supervisor.rs
src/util/: linux.rs  mod.rs  util.rs  windows.rs
tests/: test_mutators.rs  test_scheduler.rs  test_util.rs
